# TaskMonitoring

./: .gitignore  README.md  commands.md  main.py  pyproject.toml
app/application/services/: create_task.py  evaluate_task_flag.py  list_tasks.py
app/domain/entities/: task.py
app/domain/enums/: task_priority.py  task_status.py
app/domain/repositories/: task_repository.py
app/domain/services/: task_flag_evaluator.py
app/domain/services/rules/: base_rule.py  blocked_rule.py  near_due_date_rule.py  overdue_rule.py
app/domain/value_objects/: task_flag.py  task_flag_evaluation.py
app/infrastructure/logging/: logger.py
app/infrastructure/persistence/: in_memory_task_repository.py  postgresql_task_repository.py
app/interfaces/cli/: app.py  main.py  repository_factory.py
app/interfaces/cli/commands/: create_task.py
app/interfaces/cli/screens/: create_task_screen.py  list_tasks_screen.py  task_detail_screen.py
db/: schema.sql
db/CI/: bootstrap.sql
db/init/dev/: 001_create_schema.sql  002_create_tasks_table.sql  003_seed_dev_data.sql
db/migration/: V001__create_tasks_table.sql
docker/: docker-compose.dev.yml  docker-compose.test-infra.yml  docker-compose.test.yml
docs/: commands.md  docs_postgresql.md  tech_doc.md
docs/postgresql/: docs_environments.md  docs_postgresql.md  docs_test_infrastructure.md
scripts/: dev_setup.sh  test_infra_setup.sh  test_setup.sh
tests/application/: test_evalute_task_flags_use_case.py
tests/domain/: test_task.py
tests/infrastructure/: test_postgresql_task_repository.py
