[project]
name = "task-core-trainer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "psycopg[binary]>=3.3.2",
]

[tool.pytest.ini_options]
markers = [
    "infrastructure: tests that hit real infrastructure (db, network, etc)"
]
